[tool.poetry]
name = "landing-zone"
version = "0.1.0"
description = ""
authors = ["bluesentinelsec <bluesentinel@protonmail.com>"]
readme = "README.md"
packages = [{include = "landing_zone"}]

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0"
pygdbmi = "^0.11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
